# diplom_LLVM_IR

./: .gitignore  README.md
cpp/: CMakeLists.txt  Top20BiggestFuncs.cpp  main.cpp  run.sh
experiments/: README.md
experiments/benchmark_sets/: README.md  autotune_stratified_30.csv  autotune_stratified_30.csv.manifest.json  compiler_gym_target_suites.csv
experiments/intermediate_results/contextual_cem_quick_compare/: sweep_benchmark_strategy_summary.csv  sweep_manifest.json  sweep_report.md  sweep_run_summary.csv  sweep_strategy_summary.csv
experiments/intermediate_results/semantic_context_quick_size_sweep/: sweep_benchmark_strategy_summary.csv  sweep_manifest.json  sweep_report.md  sweep_run_summary.csv  sweep_strategy_summary.csv
experiments/intermediate_results/semantic_prior_quick_size_sweep/: sweep_benchmark_strategy_summary.csv  sweep_manifest.json  sweep_report.md  sweep_run_summary.csv  sweep_strategy_summary.csv
experiments/intermediate_results/stratified30_full_hybrid_sweep/: sweep_benchmark_strategy_summary.csv  sweep_manifest.json  sweep_report.md  sweep_run_summary.csv  sweep_strategy_summary.csv
python/: aggregate_tu_score.py  analyze_benchmark_set.py  autotune_tu.py  compare_autotune_runs.py  compile_gym_bridge.py  make_stratified_autotune_subset.py  materialize_benchmarks.py  pass_selection_models.py  run_experimental_series.py  run_strategy_sweep.py  run_subset_autotune.py  semantic_pass_priors.py  setup_compiler_gym_env.sh  subset_autotune_utils.py  summarize_benchmark_set.py  summarize_experiment.py
(+22 files in other folders)
